# hospitopt

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.worker  Justfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: checks.yaml  ci.yaml
alembic/: env.py
alembic/versions/: 5b456aca87c6_inital_table_setup.py  e2f2d1adb268_added_patient_name_and_status.py
charts/hospitopt/: Chart.yaml  values.yaml
charts/hospitopt/templates/: _helpers.tpl  api-deployment.yaml  api-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  secret.yaml  worker-deployment.yaml
configs/: api.yaml  app.yaml  worker.yaml
frontend/: Dockerfile  requirements.txt
frontend/frontend/: frontend.py
frontend/frontend/components/: assignment_tables.py  assignments_panel.py  chat_widget.py  header.py  map_view.py  metric_card.py  sidebar.py  sitrep_panel.py
frontend/frontend/pages/: index.py
frontend/frontend/states/: agent_state.py  dashboard_state.py
schemas/: api-schema.json  config.json  worker-schema.json
scripts/: export_schemas.py  fake_api.py  seed_db.py
src/api/: dependencies.py  main.py  models.py
src/api/routes/: ambulances.py  assignments.py  health.py  hospitals.py  patients.py
src/core/: ingest.py  models.py
src/core/config/: logging.py  settings.py
src/core/db/: ingest.py  models.py
src/core/domain/: models.py
src/hospitopt/: ingest.py  models.py
src/worker/: db.py  main.py  optimize.py  routes.py
tests/: conftest.py
tests/api/: conftest.py
tests/api/integration/: test_agent.py  test_agents_route.py  test_endpoints.py
tests/api/unit/: test_agent.py  test_config.py
tests/core/unit/: test_config.py
tests/unit/: test_config.py  test_optimize.py  test_routes.py
tests/worker/integration/: test_database.py
tests/worker/unit/: test_config.py  test_optimize.py  test_routes.py  test_routes_valhalla.py
