[project]
name = "hospitopt"
version = "0.1.0"
description = "Solution to optimize hospital-patitent allocation."
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Daniel Sousa" }]
urls = { "source" = "https://github.com/dhcsousa/hospitopt" }
dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "pyomo>=6.9.5",
]

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "mypy>=1.19.1",
    "nbstripout>=0.9.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hospitopt"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']
