[project]
name = "hospitopt"
version = "0.2.0"
description = "Solution to optimize hospital-patient allocation."
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Daniel Sousa" }]
urls = { "source" = "https://github.com/dhcsousa/hospitopt" }

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
hospitopt-core = { workspace = true }
hospitopt-api = { workspace = true }
hospitopt-worker = { workspace = true }

[dependency-groups]
dev = [
    "hospitopt-core",
    "hospitopt-api",
    "hospitopt-worker",
    "bandit>=1.9.3",
    "ipykernel>=7.1.0",
    "mypy>=1.19.1",
    "nbstripout>=0.9.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
    "testcontainers>=4.14.0",
    "httpx>=0.28.1",
    "pytest-cov>=7.0.0",
]
frontend = [
    "distinctipy>=1.3.4",
    "httpx>=0.28.1",
    "reflex>=0.8.26",
    "reflex-enterprise>=0.4.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=packages --cov-report=html --cov-report=xml --cov-fail-under=90"

[tool.coverage.run]
source = ["packages"]
omit = ["*/tests/*"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.bandit]
exclude_dirs = ["scripts"]

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']
